# tessera

./: .gitignore  LICENSE  README.md  go.mod  main.go  pyproject.toml
internal/config/: config.go  config_test.go
internal/matrix/: client.go  live_test.go  protocol.go  protocol_test.go
tessera/: __init__.py  app.py  client.py  config.py
tui/: commands.go  model.go  model_test.go  view.go
