[project]
name = "tessera"
version = "0.1.0"
description = "Terminal UI controller for the TESmart HDMI 4x4 matrix switcher"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dgnsrekt", email = "run2dos@gmail.com" }]
keywords = ["tesmart", "hdmi", "matrix", "switcher", "tui", "textual"]
dependencies = [
    "textual>=0.60",
]

[project.urls]
Homepage = "https://github.com/dgnsrekt/tessera"
Repository = "https://github.com/dgnsrekt/tessera"

[project.scripts]
tessera = "tessera.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tessera"]
